# ChessCpp

./: CMakeLists.txt  main.cpp
class/game/: Board.cpp  Board.h  Game.cpp  Game.h  Player.cpp  Player.h  Square.cpp  Square.h
class/game/piece/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.h  Queen.cpp  Rook.cpp
class/ui/: Display.cpp  Display.h
